improved usability for client side and tidy sever side
